Fix navigation menus not opening on mobile

--- a/src/app/Resources/assets/sass/layouts/_navigation.scss
+++ b/src/app/Resources/assets/sass/layouts/_navigation.scss
@@ -2,8 +2,6 @@ $nav-colour: $colour-secondary;
 $nav-secondary-colour: $colour-primary;
 $nav-border-colour: darken($nav-colour, 10%);
 
-$drawer-width: 350px;
-
 
 @media screen and (min-width: $dimen-medium) {
     @import "navigation/navbar";
