--- a/src/app/Resources/assets/sass/layouts/navigation/_drawer.scss
+++ b/src/app/Resources/assets/sass/layouts/navigation/_drawer.scss
@@ -1,3 +1,5 @@
+$drawer-width: 70vw;
+
 // drawer push transforms
 main {
     transition: transform 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
